--- a/index.html
+++ b/index.html
@@ -2,10 +2,449 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>段先泽</title>
+	<link rel="stylesheet" href="寒假作业.css" type="text/css">
+	<title>寒假作业by段增辉</title>
 </head>
 <body>
-	<h1>欢迎访问！</h1>
-	<p>---------------------</p>
+<div class="dh"><a href="http://202.195.66.7/dj/job/"><img src="1.jpg" alt="无"></a></div>
+<div class="major">
+	<img src="4.jpg" alt="无" title="计算机学院">
+	<div id="head">
+		<ul>
+			<li><a href="http://jsjxy.jsnu.edu.cn/">&nbsp首&nbsp页&nbsp</a></li>
+			<li><a href="http://jsjxy.xznu.edu.cn/xygk/list.htm">学院概况</a></li>
+			<li><a href="http://jsjxy.xznu.edu.cn/5386/list.htm">教学管理</a></li>
+			<li><a href="http://jsjxy.xznu.edu.cn/5369/list.htm">学科管理</a></li>
+			<li><a href="http://jsjxy.xznu.edu.cn/xkky/list.htm">学术研究</a></li>
+			<li><a href="http://jsjxy.xznu.edu.cn/yjsjy/list.htm">研究生教育</a></li>
+			<li><a href="http://jsjxy.xznu.edu.cn/djgz/list.htm">党建工作</a></li>
+			<li><a href="http://jsjxy.xznu.edu.cn/xtgz/list.htm">学团工作</a></li>
+			<li><a href="http://jsjxy.xznu.edu.cn/5401/list.htm">就业之窗</a></li>
+			<li><a href="http://jsjxy.xznu.edu.cn/ypgz_10640/list.htm">迎评工作</a></li>
+		</ul>
+	</div>
+	<div class="body">
+		<div class="a">
+			<div class="l1">
+				<p><br>用户登陆<br></p>
+				<form action="." method="post">
+					<p>用户名<input type="text"></p>
+					<p>密&nbsp码<input type="password"></p>
+					<input type="submit" value="登陆">
+				</form>
+			</div>
+			<div class="z">
+				<div class="t">
+					<div class="t1"><p>学院快讯</p></div>
+					<div class="t2"><a href="http://jsjxy.jsnu.edu.cn/xykx1/list.htm"><img src="3.jpg"></a></div>
+				</div>
+				<div class="n">
+					<table>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>全 是 百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+			<div class="right">
+				<div id="r1"><p>通知公告</p></div>
+				<div id="r2">
+					<marquee behavior="scroll" direction="up" scrollamount="8">
+						<ul>
+							<li class="r3"><p>第一周<span class="r4">2-15</span></p></li>
+							<li class="r3"><p>第二周<span class="r4">2-16</span></p></li>
+							<li class="r3"><p>第三周<span class="r4">2-17</span></p></li>
+							<li class="r3"><p>第四周<span class="r4">2-18</span></p></li>
+							<li class="r3"><p>第五周<span class="r4">2-19</span></p></li>
+							<li class="r3"><p>第六周<span class="r4">2-20</span></p></li>
+							<li class="r3"><p>第七周<span class="r4">2-21</span></p></li>
+							<li class="r3"><p>第八周<span class="r4">2-22</span></p></li>
+							<li class="r3"><p>第九周<span class="r4">2-23</span></p></li>
+							<li class="r3"><p>第十周<span class="r4">2-24</span></p></li>
+							<li class="r3"><p>第十一周<span class="r4">2-25</span></p></li>
+							<li class="r3"><p>第十二周<span class="r4">2-26</span></p></li>						
+						</ul>
+					</marquee>
+				</div>
+			</div>
+		</div>
+		<div class="a">
+			<div class="z">
+				<div class="t">
+					<div class="t1"><p>教学工作</p></div>
+					<div class="t2"><a href="http://jsjxy.jsnu.edu.cn/jxgz/list.htm"><img src="3.jpg"></a></div>
+				</div>
+				<div class="n">
+					<table>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>全 是 百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+			<div class="z">
+				<div class="t">
+					<div class="t1"><p>学科科研</p></div>
+					<div class="t2"><a href="http://jsjxy.jsnu.edu.cn/xkky/list.htm"><img src="3.jpg"></a></div>
+				</div>
+				<div class="n">
+					<table>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>全 是 百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+			<div class="right">
+				<div class="t">
+					<div class="t3"><p>研究生教育</p></div>
+					<div class="t2"><a href="http://jsjxy.jsnu.edu.cn/5374/list.htm"><img src="3.jpg"></a></div>
+				</div>
+				<div class="nr">
+					<table>
+						<tr>
+							<td class="n3"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百度啦啦啦</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n3"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百度啦啦啦</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n3"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百度啦啦啦</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n3"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百度啦啦啦</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n3"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百度啦啦啦</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n3"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百度啦啦啦</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n3"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百度啦啦啦</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n3"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百度啦啦啦</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n3"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百度啦啦啦</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+		</div>
+		<div class="a">
+			<div class="z">
+				<div class="t">
+					<div class="t1"><p>党建工作</p></div>
+					<div class="t2"><a href="http://jsjxy.jsnu.edu.cn/djgz/list.htm"><img src="3.jpg"></a></div>
+				</div>
+				<div class="n">
+					<table>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>全 是 百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+			<div class="z">
+				<div class="t">
+					<div class="t1"><p>学团工作</p></div>
+					<div class="t2"><a href="http://jsjxy.jsnu.edu.cn/xtgz/list.htm"><img src="3.jpg"></a></div>
+				</div>
+				<div class="n">
+					<table>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>全 是 百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n1"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百 度 啦 啦 啦 ~ ~ ~</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+			<div class="right">
+				<div class="t">
+					<div class="t3"><p>下&nbsp&nbsp载</p></div>
+					<div class="t2"><a href="http://jsjxy.jsnu.edu.cn/5469/list.htm"><img src="3.jpg"></a></div>
+				</div>
+				<div class="nr">
+					<table>
+						<tr>
+							<td class="n3"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百度啦啦啦</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n3"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百度啦啦啦</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n3"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百度啦啦啦</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n3"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百度啦啦啦</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n3"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百度啦啦啦</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n3"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百度啦啦啦</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n3"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百度啦啦啦</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n3"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百度啦啦啦</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+						<tr>
+							<td class="n3"><li><a href="http://www.baidu.com" title='百度啦啦啦~~~' alt='百度啦啦啦~~'>百度啦啦啦</a></li></td>
+							<td class="n2">02-03</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
+	<hr style="height:5px;border:none;border-top:3px solid #22B8DD;" >
+	<div class="foot">
+		<div class="f1">
+			<div class="f11"><p><strong>相关链接:</strong></p></div>
+			<select name="select4" onchange="window.open(this.value)">
+                <option selected="selected">－－计算机行业单位－－</option>
+                <option value="http://www.miit.gov.cn/n11293472/index.html">国家工信部</option>
+                <option value="http://www.iotcn.org.cn">中国物联网</option>
+                <option value="http://www.cisis.com.cn">中国软件和信息交易会</option>
+                <option value="http://www.most.gov.cn">国家科技部</option>
+                <option value="http://www.jssti.net">江苏省科技厅</option>
+                <option value="http://www.nsfc.gov.cn">国家自然科学基金委员会</option>
+                <option value="http://www.ccf.org.cn/sites/ccf">中国计算机协会</option>
+                <option value="http://cjc.ict.ac.cn">计算机学报</option>
+                <option value="http://www.jos.org.cn/ch/index.aspx">软件学报</option>
+                &nbsp; &nbsp;
+            </select>
+            <select name="select5" onchange="window.open(this.value)">
+                <option selected="selected">－－校内网址－－－</option>
+                <option value="http://www.xznu.edu.cn/">江苏师范大学</option>
+                <option value="http://myu.jsnu.edu.cn/">校内信息</option>
+                <option value="http://202.195.72.11/www/">图书馆</option>
+                <option value="http://epoch.xznu.edu.cn">新纪元</option>
+                <option value="http://jwc.xznu.edu.cn">教务处</option>
+                <option value="http://xsc.xznu.edu.cn">学生处</option>
+                <option value="http://yjsc.xznu.edu.cn">研究生处</option>
+                <option value="http://jsnuhelper.jsnu.edu.cn/phone/index.php">校内电话查询</option>
+                <option value="http://service.jsnu.edu.cn/nlink/all-1.asp">校内网络导航</option>
+                <option value="http://bkjw.xznu.edu.cn/Login.aspx">教务管理系统</option>
+                <option value="http://alpha.xznu.edu.cn">阿尔法工作室</option>
+            </select> &nbsp;  &nbsp;
+            <select name="select4" onchange="window.open(this.value)">
+                <option selected="selected">－－－－国内科研机构－－－－</option>
+                <option value="http://www.ict.ac.cn/">中科院计算技术研究所</option>
+                <option value="http://www.iscas.ac.cn/">中科院软件研究所</option>
+                <option value="http://www.icst.pku.edu.cn/">北大计算机研究所</option>
+                <option value="http://www.cs.tsinghua.edu.cn/">清华大学计算机科学与技术系</option>
+                <option value="http://www.buptsse.cn/">北京邮电大学软件学院</option>
+                <option value="http://www.cs.sjtu.edu.cn/">上海交通大学计算机科学与工程系</option>
+                <option value="http://www.cs.zju.edu.cn/chinese/">浙江大学计算机科学与技术学院</option>
+                <option value="http://scse.buaa.edu.cn/">北京航空航天大学计算机学院</option>
+                <option value="http://cs.nju.edu.cn/">南京大学计算机科学与技术系</option>
+                <option value="http://cse.seu.edu.cn/CSE/UI/">东南大学计算机科学与工程学院</option>
+            </select> 
+            &nbsp;  &nbsp;
+            <select name="select2" onchange="window.open(this.value)">
+                <option selected="selected">－－学院应用系统－－</option>
+                <option value="http://202.195.66.7/jobs/">就业跟踪系统</option>
+                <option value="http://202.195.66.7/DJ/">党建交互式系统</option>
+                <option value="http://202.195.66.7/dj/job/">就业工作日历</option>
+                <option value="http://202.195.66.6:90/">在线教学</option>
+                <option>乐教乐学平台 </option>
+            </select>
+		</div>	
+		<div class="f2">
+			<div class="f21"><img src="2.jpg" alt="无" title="江苏师范大学" width="400px" height="100px"></div>
+			<div class="f22">
+				<p>版权所有:江苏师范大学计算机科学与技术学院 ©2007-2015   邮编：221116<br>
+  地址：江苏省徐州市铜山新区上海路101号         电话：0516-83500307<br> 
+    电子邮件：10307440@qq.com     技术维护：计算机系统研发中心  管理入口</p>
+			</div>
+		</div>
+	</div>
+</div>	
 </body>
 </html>
