--- a/index.html
+++ b/index.html
@@ -6,40 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>
-	<div class="container">
-		<div class="mainBody">
-			<input type="radio" name="radio-set" id="control-1" checked="checked">
-			<a href="#intro-1">一</a>
-			<input type="radio" name="radio-set" id="control-2" >
-			<a href="#intro-1">二</a>
-			<input type="radio" name="radio-set" id="control-3" >
-			<a href="#intro-1">三</a>
-			<input type="radio" name="radio-set" id="control-4" >
-			<a href="#intro-1">四</a>
-			<div class="mainContent">
-				<section class="intro" id="intro-1">	<!--section 段落-->
-					<div class="traAngle"></div>
-					<h2>爱上一首歌</h2>
-					<p>是因为它的旋律</p>
-				</section>
-				<section class="intro stcolor" id="intro-2">	<!--section 段落-->
-					<div class="traAngle"></div>
-					<h2>爱上一本书</h2>
-					<p>是因为它的内容</p>
-				</section>
-				<section class="intro" id="intro-3">	<!--section 段落-->
-					<div class="traAngle"></div>
-					<h2>只有爱上你</h2>
-					<p>不需要任何理由</p>
-				</section>
-				<section class="intro stcolor" id="intro-4">	<!--section 段落-->
-					<div class="traAngle"></div>
-					<h2>和你相处一天</h2>
-					<p>胜过在红尘庸碌<wbr>一万年</p>
-				</section>
-
-			</div>
-		</div>
-	</div>
+	<h1>欢迎访问段先泽的博客</h1>
+	<p>虽然现在什么都没有。。。</p>
 </body>
 </html>
