--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>段先泽</title>
+	<script src="js.js"></script>
 	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>
-	<h1>欢迎访问段先泽的博客</h1>
-	<p>虽然现在什么都没有。。。</p>
+<header><span class="h1"><h1>欢迎访问段先泽的博客</h1></span>
+	<nav>
+	<p>虽然现在还是空的。。。。</p>
+	</nav>
+</header>
 
-
-
-	
-	<p>姚桐是Sb</p>
 </body>
 </html>
