--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>
-<header><span class="h1"><h1>欢迎访问段先泽的博客</h1></span>
-	<nav>
-	<p>虽然现在还是空的。。。。</p>
-	</nav>
-</header>
+<header><span class="h1"><h1>欢迎访问段先泽的博客</h1></span></header>
 
 </body>
 </html>
