--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-cn">
 <head>
+	<link rel="stylesheet" href="css/first.css">
+	<script src="js/jquery.min.js"></script>
+	<script src="js/first.js"></script>
 	<meta charset="UTF-8">
-	<title>段先泽</title>
-	<script src="js.js"></script>
-	<link rel="stylesheet" type="text/css" href="css.css">
+	<title>贾汪校区</title>
 </head>
 <body>
-<header><span class="h1"><h1>欢迎访问段先泽的博客</h1></span></header>
-
+	<div id="back"><img id="bb" src="img/起始页/师大.jpg" alt=""></div>
+	<audio src="audio/bgm.mp3" autoplay="autoplay" loop="loop"></audio>
+	<div id="x"><span class="b"><img id="m" src="img/起始页/师大校徽.png" alt="师大校徽" title="师大校徽"></span><span class="b"><img id="n" src="img/起始页/江苏师范大学.png" alt="江苏师范大学"></span></div>
+	<div id="y"><img src="img/起始页/贾汪校区.png" alt="贾汪校区" width="600px" height="136px"></div>
+	<div id="next"><a href="html/main.html" target="_blank">点击进入</a></div>
 </body>
 </html>
